avcodec/dca_parser: Extend DTS core sync word and fix existing check

Check extended sync word for 16-bit LE and BE core streams to reduce
probability of alias sync detection. Previously sync word extension was
checked only for 14-bit streams (and this check did not properly work
across buffer boundary).

Use 64-bit parser state to make extended sync word detection work across
buffer boundary.

This is sufficient to make the sample in ticket #4492 parse
successfully.

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>